--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "./plugins-manifest.json"
   ],
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "npm run validate-manifest && webpack --config webpack.config.js",
+    "validate-manifest": "node scripts/validate-manifest.js",
     "install:ci": "npm ci"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
+    "ajv": "^8.17.1",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.0",
