--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "npm run validate-manifest && webpack --config webpack.config.js",
     "validate-manifest": "node scripts/validate-manifest.js",
-    "install:ci": "npm ci"
+    "install:ci": "npm ci",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -20,6 +21,7 @@
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.0",
+    "husky": "^9.1.7",
     "webpack": "^5.101.0",
     "webpack-cli": "^6.0.1"
   }
