--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "graphdb-workbench-plugins",
   "version": "0.0.1-TR11",
   "description": "Plugins for GraphDB workbench",
+  "type": "module",
   "license": "Apache-2.0",
   "author": "Ontotext AD",
   "files": [
@@ -11,6 +12,8 @@
   "scripts": {
     "build": "npm run validate-manifest && webpack --config webpack.config.js",
     "validate-manifest": "node scripts/validate-manifest.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "install:ci": "npm ci",
     "prepare": "husky"
   },
