--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
+    "@eslint/js": "^9.33.0",
     "ajv": "^8.17.1",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
